# waveshare_lcd_43B-SquareLineStudio-LVGL9-Minimal

./: README.md  platformio copy.ini  platformio.ini  sdkconfig.waveshare_lcd_4_3  sdkconfig.waveshare_lcd_4_3B_LVGL9
SquareLineStudio/WaveshareESP32-S3_4.3inch_800x480/: WaveshareESP32-S3_4.3inch_800x480.sll  WaveshareESP32-S3_4.3inch_800x480.slp  WaveshareESP32-S3_4.3inch_800x480.spj  project.info
SquareLineStudio/WaveshareESP32-S3_4.3inch_800x480/assets/: ui_font_JetBrainsMono34bpp4.c  ui_font_JetBrainsMono34bpp4.fcfg  ui_font_JetBrainsMonoReg48Bpp4.c  ui_font_JetBrainsMonoReg48Bpp4.fcfg  ui_font_JetBrainsMonoReg60Bpp4.fcfg
SquareLineStudio/WaveshareESP32-S3_4.3inch_800x480/components/: MainGauge.ecomp
include/: _lv_conf.h
src/: filelist.txt  main.cpp  rpm_style.c  rpm_style.h
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_maingauge.c  ui_comp_maingauge.h  ui_events.h  ui_font_JetBrainsMonoReg60Bpp4.c  ui_helpers.c  ui_helpers.h  ui_img_gaugetest180b_png.c  ui_img_rpm_gauge3_png.c  ui_scr_gauges1.c  ui_scr_gauges1.h  ui_scr_main.c  ui_scr_main.h
